--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -56,6 +56,7 @@
 			font-weight: bold;
 			padding-bottom: 0;
 			margin-bottom: 0;
+		    text-transform: capitalize;
 			@media (max-width: 767px){
 				font-size: 26px;
 			}
