--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -347,3 +347,9 @@
 		}
 	}
 }
+.transformation-template-section{
+	padding-right: 3rem;
+	@media (max-width: 767px){
+		padding-right: 15px;
+	}
+}
