--- a/wp-content/themes/healthkart/assets/scss/_global.scss
+++ b/wp-content/themes/healthkart/assets/scss/_global.scss
@@ -98,3 +98,17 @@ strong{
 	z-index: 1;
 	border-radius: 24px;
 }
+.btn.hk-btn{
+	background: #18C7C7;
+	color: white !important;
+	height: 48px;
+	border-radius: 4px;
+    padding: 14px 40px;
+    text-transform: uppercase;
+    font-size: 15px;
+    line-height: 20px;
+    letter-spacing: 0.6px;
+    border: 0;
+    font-weight: bold;
+    margin: 0;
+}
