--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -353,3 +353,18 @@
 		padding-right: 15px;
 	}
 }
+.transformation{
+	&-story{
+	    background: #F2F2F2;
+	    padding: 30px;
+	    text-align: center;
+	    margin: 30px 0 15px;
+	    &_heading{
+			font-size: 26px;
+			line-height: 40px;
+			padding-bottom: 20px;
+			font-weight: 400;
+			color: #000000;
+	    }
+	}
+}
