--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -1,9 +1,19 @@
 .banner{
 	&-slider{
+		.slider{
+		    opacity: 0;
+		    visibility: hidden;
+		    transition: opacity 1s ease;
+		    -webkit-transition: opacity 1s ease;
+		    &.slick-initialized {
+		        visibility: visible;
+		        opacity: 1;
+	        } 
+		}
 		.slick-slide{
 			.slide__img{
 				img{
-					border-radius:20px;
+					border-radius:24px;
 					height: 420px;
 					width: 100%;
 					object-fit: cover;
@@ -533,7 +543,6 @@
 		&-content{
 			.title{
 				line-height: 26px;
-			    padding-top: 20px;
 				a{
 					font-size: 18px;
 					font-weight: 900;
@@ -594,6 +603,9 @@
 		}
 	}
 	.slick{
+		&-list{
+			border-radius: 24px;
+		}
 		&-dots{
 			position: absolute;
 			bottom: 0;
