--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -64,6 +64,7 @@
 	        color: #000;
 			@media (max-width: 767px){
 				font-size: 26px;
+			    line-height: 34px;
 			}
 		}
 	    .author{
@@ -132,7 +133,7 @@
 				line-height: 1.5;
 		    }
 		    @media (max-width: 767px){
-		    	font-size: 18px;
+		    	font-size: 20px !important;
 		    	line-height: 24px;
 		    }
 		}
@@ -169,12 +170,19 @@
 				line-height: 2 !important;
 				color: #333 !important;
 				margin: 10px 0 !important;
+				text-align: justify;
+				@media (max-width: 767px){
+					font-size: 14px;
+				}
    			}
    			ul, ol{
    				li{
 					font-size: 17px;
 					line-height: 2 !important;
 		   			color: #212326;
+					@media (max-width: 767px){
+						font-size: 14px;
+					}
    				}
    			}
 		}
@@ -234,6 +242,12 @@
 			@media (max-width: 767px){ 
 				text-align: left;
 			}
+		}
+	}
+	&-content{
+		padding-right: 50px;
+		@media (max-width: 767px){
+			padding-right: 15px;
 		}
 	}
 	@media (max-width: 767px){
