--- a/wp-content/themes/healthkart/assets/scss/_sidebar.scss
+++ b/wp-content/themes/healthkart/assets/scss/_sidebar.scss
@@ -138,9 +138,10 @@
 			}
 			h2.title{
 				padding: 0;
+				line-height: 20px !important;
 				a{
 					font-size: 16px;
-					line-height: 22px;
+					line-height: 20px !important;
 					font-weight: 900;
 					color: black;
 					&:hover{
