--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -51,12 +51,14 @@
 			line-height: 26px;
 		}
 		.entry-title{
-			font-size: 33px;
-			line-height: 44px;
+			font-size: 38px;
+			line-height: 50px;
+			padding-right: 30px;
 			font-weight: bold;
 			padding-bottom: 0;
 			margin-bottom: 0;
 		    text-transform: capitalize;
+	        color: #000;
 			@media (max-width: 767px){
 				font-size: 26px;
 			}
@@ -118,10 +120,14 @@
 	    	}
 	    }
 		h2{
-			font-size: 24px;
-			line-height: 30px;
-		    padding: 15px 0;
-		    font-weight: 400;
+    		padding: 30px 0 0;
+			font-size: 25px!important;
+			line-height: 1.5;
+		    span{
+				font-weight: 600 !important;
+				font-size: 25px!important;
+				line-height: 1.5;
+		    }
 		    @media (max-width: 767px){
 		    	font-size: 18px;
 		    	line-height: 24px;
@@ -143,21 +149,22 @@
 				}
 			}
 			p, span{
-			    font-size: 16px !important;
 			    font-family: 'Roboto', sans-serif !important;
-	   			line-height: 32px;
-	   			color: #212326;
+				font-size: 17px;
+				line-height: 2 !important;
+				color: #333 !important;
+				margin: 10px 0 !important;
    			}
    			ul, ol{
    				li{
-				    font-size: 16px !important;
-		   			line-height: 30px;
+					font-size: 17px;
+					line-height: 2 !important;
 		   			color: #212326;
    				}
    			}
 		}
 		.hk-content-image{
-			margin: 10px 25px 25px;
+			margin: 15px 0 25px;
 		}
 		.share{
 			margin: 30px 0;
@@ -349,6 +356,11 @@
 }
 .transformation-template-section{
 	padding-right: 3rem;
+	.transformation-section{
+		&-single-image{
+			width: 80%;
+		}
+	}
 	@media (max-width: 767px){
 		padding-right: 15px;
 	}
