--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -138,6 +138,18 @@
 		}
 		.entry-content {
 			margin: 0;
+			table{
+				border: 0;
+			}
+			table td.rtecenter{
+				text-align: center;
+			}
+			table tr:nth-child(2n+1){
+				background: #e0e0e0;
+			}
+			table tr:nth-child(2n+2){
+				background: #f5f5f5;
+			}
 			a{
 				color: #00bfbf;
 				span{
