--- a/wp-content/themes/healthkart/assets/scss/_sidebar.scss
+++ b/wp-content/themes/healthkart/assets/scss/_sidebar.scss
@@ -124,7 +124,7 @@
 			font-size: 14px;
 			text-align: center;
 			padding: 18px 0 10px;
-			font-weight: 900;
+			font-weight: 600;
 		}
 		.recent-post{
 			border-bottom: 1px solid #bfbfbf;
@@ -142,7 +142,7 @@
 				a{
 					font-size: 16px;
 					line-height: 20px !important;
-					font-weight: 900;
+					font-weight: 600;
 					color: black;
 					&:hover{
 						text-decoration: none;
@@ -179,7 +179,7 @@
 		}
 		.next-articles{
 			.recent-post-icons{
-				display: flex;
+				display: none;
 				margin: 30px 0 10px;
 				span.heart{
 					i{
