footer img issue fix

--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -395,7 +395,7 @@
 		}
 	}
 	.entry-content{
-		h2.&-heading{
+		&-heading{
 		    padding: 30px 0 0;
 		    font-size: 25px !important;
 		    line-height: 1.5;
