--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -466,7 +466,14 @@
 		}
 	}
 }
-
+.infographics{
+	&-heading{
+		border-bottom: 1px solid #ececec;
+		font-weight: bold;
+		font-size: 20px;
+		font-weight: bold;
+	}
+}
 .transformation-section{
 	&-single{
 		&-image{
