--- a/wp-content/themes/healthkart/assets/css/theme-styles.css
+++ b/wp-content/themes/healthkart/assets/css/theme-styles.css
@@ -9670,4 +9670,116 @@ strong {
   .similar-articles {
     display: none; } }
 
+.nested-section {
+  background-color: #f7f7f7; }
+  .nested-section-subcategory-heading {
+    font-size: 18px;
+    color: #212121;
+    margin: 0 auto;
+    width: 94%;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline; }
+  .nested-section-subcategory-wrapper {
+    background-color: #fff;
+    display: inline-block;
+    width: 100%;
+    background: #fff;
+    margin-top: 10px;
+    box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.14);
+    min-height: 150px; }
+  .nested-section-subcategory-content {
+    max-width: 1280px;
+    margin: 0 auto;
+    width: 94%;
+    margin: 60px 0 30px;
+    display: block !important;
+    margin-top: 0; }
+    .nested-section-subcategory-content .recent-post {
+      border-top: 0; }
+      .nested-section-subcategory-content .recent-post .category {
+        margin: 10px 0; }
+        .nested-section-subcategory-content .recent-post .category a {
+          color: #00bfbf;
+          font-weight: 500;
+          font-size: 14px;
+          line-height: 18px; }
+          .nested-section-subcategory-content .recent-post .category a:hover {
+            text-decoration: none; }
+      .nested-section-subcategory-content .recent-post .dot {
+        padding: 0 8px; }
+        .nested-section-subcategory-content .recent-post .dot i {
+          font-size: 5px;
+          vertical-align: middle; }
+      .nested-section-subcategory-content .recent-post .last-read {
+        color: rgba(0, 0, 0, 0.49);
+        font-size: 12px;
+        line-height: 18px; }
+      .nested-section-subcategory-content .recent-post-header h2.title {
+        line-height: 24px;
+        padding: 6px 0px; }
+        .nested-section-subcategory-content .recent-post-header h2.title a {
+          text-transform: capitalize; }
+      @media (min-width: 1024px) {
+        .nested-section-subcategory-content .recent-post-featured-img img {
+          height: 200px; } }
+      .nested-section-subcategory-content .recent-post-icons {
+        display: none;
+        margin: 15px 0 10px; }
+        .nested-section-subcategory-content .recent-post-icons span.heart i {
+          color: red; }
+        .nested-section-subcategory-content .recent-post-icons span.comment i {
+          color: #868686; }
+    .nested-section-subcategory-content .recent-post-featured-img img {
+      opacity: 1;
+      transform: scale(1);
+      transition: all .3s ease-in-out;
+      width: 100%;
+      max-height: 100%;
+      max-width: 100%;
+      width: 100%;
+      height: 100%;
+      margin: auto;
+      border-radius: 8px 8px 0 0;
+      object-fit: cover; }
+      @media (min-width: 768px) and (max-width: 991px) {
+        .nested-section-subcategory-content .recent-post-featured-img img {
+          height: 120px; } }
+      @media (min-width: 1024px) {
+        .nested-section-subcategory-content .recent-post-featured-img img {
+          height: 200px; } }
+    .nested-section-subcategory-content .recent-post-header h2.title {
+      padding: 0;
+      line-height: 26px; }
+      .nested-section-subcategory-content .recent-post-header h2.title a {
+        font-size: 18px;
+        line-height: 26px;
+        font-weight: 600;
+        color: black; }
+        @media (max-width: 767px) {
+          .nested-section-subcategory-content .recent-post-header h2.title a {
+            font-size: 14px;
+            line-height: 19px; } }
+        .nested-section-subcategory-content .recent-post-header h2.title a:hover {
+          text-decoration: none; }
+    .nested-section-subcategory-content .recent-post-excerpt {
+      font-size: 15px;
+      line-height: 1.5 !important;
+      color: #212326; }
+    .nested-section-subcategory-content .recent-post-icons {
+      display: none; }
+    @media (max-width: 767px) {
+      .nested-section-subcategory-content {
+        display: none; } }
+    .nested-section-subcategory-content .recent-post-content a {
+      color: #00bfbf;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 18px; }
+    @media (min-width: 768px) {
+      .nested-section-subcategory-content .img-tag {
+        font-size: 8px;
+        padding: 4px 8px !important;
+        border-radius: 10px; } }
+
 /*# sourceMappingURL=theme-styles.css.map */
