--- a/wp-content/themes/healthkart/assets/scss/_category.scss
+++ b/wp-content/themes/healthkart/assets/scss/_category.scss
@@ -23,12 +23,40 @@
 			max-width: 1280px;
 		    margin: 0 auto;
 		    width: 94%;
-
-			margin: 60px 0 30px;
 			display: block !important;
-			margin-top: 0;
+			.slick-prev{
+				display: none;
+			}
+			.slick{
+				&-next{
+					background-image: url("/assets/images/slider-next.svg");
+				}
+				&-prev{
+					background-image: url("/assets/images/slider-prev.svg");
+				}
+				&-arrow{
+					font-size: 0;
+					line-height: 0;
+					display: block;
+					width: 20px;
+					height: 20px;
+					padding: 5px;
+					cursor: pointer;
+					color: transparent;
+					border: 0;
+					outline: none;
+					background: transparent;
+					background-repeat: no-repeat;
+					background-size: cover;
+				}
+			}
 			.recent-post {
 			    border-top: 0;
+			    box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
+			    border-radius: 8px;
+			    &:hover{
+			    	box-shadow: 0 2px 4px 0 rgba(0,0,0,.3);
+			    }
 	    		.category{
 					margin: 10px 0;
 					a{
@@ -155,4 +183,3 @@
 		}
 	}
 }
-    
