--- a/wp-content/themes/healthkart/assets/scss/_category.scss
+++ b/wp-content/themes/healthkart/assets/scss/_category.scss
@@ -9,13 +9,14 @@
 			display: flex;
 			justify-content: space-between;
 			align-items: baseline;
+			padding-left: 0;
 		}
 		&-wrapper{
 			background-color: #fff;
 			display: inline-block;
 		    width: 100%;
 		    background: #fff;
-		    margin-top: 10px;
+		    //margin-top: 10px;
 		    box-shadow: 0 0 7px 0 rgba(0,0,0,.14);
 		    min-height: 150px;
 		}
@@ -28,6 +29,9 @@
 				display: none;
 			}
 			.slick{
+				&-list{
+					padding-left: 0 !important;
+				}
 				&-next{
 					background-image: url("/assets/images/slider-next.svg");
 				}
@@ -54,6 +58,7 @@
 			    border-top: 0;
 			    box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
 			    border-radius: 8px;
+			    margin-left: 0 !important;
 			    &:hover{
 			    	box-shadow: 0 2px 4px 0 rgba(0,0,0,.3);
 			    }
@@ -64,6 +69,9 @@
 						font-weight: 500;
 						font-size: 14px;
 					    line-height: 18px;
+					    @media (max-height: 767px){
+					    	font-size: 12px;
+					    }
 					    &:hover{
 					    	text-decoration: none;
 					    }
@@ -83,7 +91,7 @@
 				}
 				&-header{
 					h2.title{
-						line-height: 24px;
+						line-height: 10px;
 						padding: 6px 0px;
 						a{
 							text-transform: capitalize;
@@ -91,6 +99,13 @@
 					}
 				}
 				&-featured-img{
+					width: auto;
+					height: 250px;
+					margin: auto;
+					object-fit: cover;
+    				@media (min-width: 768px){				    
+    					height: 200px;
+					}
 					img{
 						@media (min-width: 1024px){
 							height: 200px;
@@ -137,7 +152,7 @@
 				&-header{
 					h2.title{
 						padding: 0;
-						line-height: 26px;
+						line-height: 10px;
 						a{
 							font-size: 18px;
 							line-height: 26px;
@@ -157,6 +172,9 @@
 				    font-size: 15px;
 				    line-height: 1.5 !important;
 				    color: #212326;
+				    @media (max-width: 767px){
+				    	font-size: 12px;
+				    }
 				}
 				&-icons{
 					display: none;
