--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -295,8 +295,10 @@
 .category-loader{
 	@media (min-width: 767px){
 		position: absolute;
-	    top: 0;
 	    left: 42%;
+		height: 100px;
+		width: 200px;
+		bottom: 150px;
 	}
 }
 .category-filler{
