--- a/wp-content/themes/healthkart/assets/css/theme-styles.css
+++ b/wp-content/themes/healthkart/assets/css/theme-styles.css
@@ -9837,5 +9837,79 @@ strong {
         font-size: 8px;
         padding: 4px 8px !important;
         border-radius: 10px; } }
+  .nested-section-chips {
+    background: #fff;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+    text-align: center;
+    max-width: 100%;
+    overflow: auto; }
+    .nested-section-chips .single-chip {
+      display: inline-block;
+      font-size: 16px;
+      margin: 0 7px;
+      font-weight: 700;
+      text-transform: uppercase;
+      cursor: pointer;
+      border-radius: 2px;
+      border: 2px solid #ff6f61;
+      color: #ff6f61;
+      background-color: #fff; }
+      .nested-section-chips .single-chip.active {
+        background-color: #ff6f61;
+        color: #fff; }
+  .nested-section-posts-wrapper {
+    max-width: 1280px;
+    margin: auto;
+    min-height: 600px; }
+  .nested-section-posts-title {
+    color: rgba(33, 33, 33, 0.8);
+    font-size: 16px;
+    padding: 10px 16px;
+    font-weight: 700;
+    margin: 15px 0 0; }
+  .nested-section-posts-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start; }
+  .nested-section-posts-single {
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    margin: 15px 20px;
+    flex-basis: 30%;
+    cursor: pointer;
+    text-decoration: none;
+    color: #ff6f61; }
+    .nested-section-posts-single-img {
+      width: 160px;
+      padding: .5rem;
+      flex-shrink: 0; }
+      .nested-section-posts-single-img img {
+        opacity: 1;
+        transform: scale(1);
+        transition: all .3s ease-in-out; }
+    .nested-section-posts-single-content {
+      padding: .8rem 1rem;
+      color: #212121;
+      border-left: 1px solid #d6d6d6; }
+    .nested-section-posts-single-header {
+      font-size: 14px;
+      font-weight: 700;
+      color: #212121;
+      margin-bottom: 5px;
+      text-transform: uppercase; }
+    .nested-section-posts-single-excerpt {
+      font-size: 12px;
+      color: #212121;
+      max-height: 50px;
+      overflow: hidden; }
+    .nested-section-posts-single-readmore {
+      font-size: 12px;
+      color: #ff6f61;
+      text-transform: uppercase;
+      margin-top: 5px;
+      text-align: right;
+      font-weight: 700; }
 
 /*# sourceMappingURL=theme-styles.css.map */
