--- a/wp-content/themes/healthkart/assets/scss/_category.scss
+++ b/wp-content/themes/healthkart/assets/scss/_category.scss
@@ -241,6 +241,11 @@
 		}
 	}
 	&-posts{
+		&-loader{
+			position: absolute;
+			top: 0;
+			left: 50%;
+		}
 		&-wrapper{
 			max-width: 1280px;
 			margin: auto;
