--- a/wp-content/themes/healthkart/assets/scss/_category.scss
+++ b/wp-content/themes/healthkart/assets/scss/_category.scss
@@ -9,7 +9,6 @@
 			display: flex;
 			justify-content: space-between;
 			align-items: baseline;
-			padding-left: 0;
 		}
 		&-wrapper{
 			background-color: #fff;
@@ -21,10 +20,14 @@
 		    min-height: 150px;
 		}
 		&-content{
-			max-width: 1280px;
 		    margin: 0 auto;
 		    width: 94%;
-			display: block !important;
+			//display: block !important;
+			display: flex;
+			flex-flow: row wrap;
+			justify-content: flex-start;
+			//overflow: hidden;
+			//max-height: 395px;
 			.slick-prev{
 				display: none;
 			}
@@ -59,18 +62,20 @@
 					outline: 0;
 				    background-repeat: no-repeat;
 				    background-color: transparent;
-				    background-size: contain;				}
+				    background-size: contain;				
+				}
 			}
 			.recent-post {
 			    border-top: 0;
 			    box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
 			    border-radius: 8px;
 			    margin-left: 0 !important;
+			    flex-basis: 22%;
+			    margin: 15px 20px;
 			    &:hover{
 			    	box-shadow: 0 2px 4px 0 rgba(0,0,0,.3);
 			    }
 	    		.category{
-
 				    margin-bottom: 10px;
 					a{
 						color: #00bfbf;
