--- a/wp-content/themes/healthkart/assets/scss/_category.scss
+++ b/wp-content/themes/healthkart/assets/scss/_category.scss
@@ -317,3 +317,36 @@
 		}
 	}
 }
+.category-list-view{
+	.videos{
+		&-heading{
+			border-bottom: 1px solid #ececec;
+			font-weight: bold;
+			font-size: 20px;
+			font-weight: bold;
+		}
+		&-single{
+			&-image{
+				position: relative;
+				padding-bottom: 56.25%; 
+				height: 0;
+				&-overlay{
+				    position: absolute;
+				    top: 0;
+				    bottom: 0;
+				    left: 0;
+				    right: 0;
+				    z-index: 99;
+				    background-color: transparent;
+				}
+				&-iframe{
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: 100%;
+				}
+			}
+		}
+	}
+}
