--- a/wp-content/themes/healthkart/assets/css/theme-styles.css
+++ b/wp-content/themes/healthkart/assets/css/theme-styles.css
@@ -9942,4 +9942,27 @@ strong {
     width: 100%;
     height: 100%; }
 
+.category-reads .dot {
+  padding: 0 8px; }
+  .category-reads .dot i {
+    font-size: 5px;
+    vertical-align: middle; }
+.category-reads .last-read {
+  color: rgba(0, 0, 0, 0.49);
+  font-size: 14px;
+  line-height: 26px; }
+.category-reads .entry-title {
+  font-size: 38px;
+  line-height: 50px;
+  padding-right: 30px;
+  font-weight: bold;
+  padding-bottom: 0;
+  margin-bottom: 0;
+  text-transform: capitalize;
+  color: #000; }
+  @media (max-width: 767px) {
+    .category-reads .entry-title {
+      font-size: 26px;
+      line-height: 34px; } }
+
 /*# sourceMappingURL=theme-styles.css.map */
