--- a/wp-content/themes/healthkart/assets/scss/_category.scss
+++ b/wp-content/themes/healthkart/assets/scss/_category.scss
@@ -350,3 +350,32 @@
 		}
 	}
 }
+
+.category-reads{
+	.dot{
+	    padding: 0 8px;
+		i{
+			font-size: 5px;
+			vertical-align: middle;
+		}
+	}
+	.last-read{
+		color: rgba(0,0,0,0.49);
+		font-size: 14px;
+		line-height: 26px;
+	}
+	.entry-title{
+		font-size: 38px;
+		line-height: 50px;
+		padding-right: 30px;
+		font-weight: bold;
+		padding-bottom: 0;
+		margin-bottom: 0;
+	    text-transform: capitalize;
+        color: #000;
+		@media (max-width: 767px){
+			font-size: 26px;
+		    line-height: 34px;
+		}
+	}
+}
