nested category page fixes

--- a/wp-content/themes/healthkart/assets/css/theme-styles.css
+++ b/wp-content/themes/healthkart/assets/css/theme-styles.css
@@ -9887,6 +9887,14 @@ strong {
     cursor: pointer;
     text-decoration: none;
     color: #ff6f61; }
+    @media (max-width: 1028px) and (min-width: 768px) {
+      .nested-section-posts-single {
+        flex-basis: 45%;
+        margin: 15px 18px; } }
+    @media (max-width: 767px) {
+      .nested-section-posts-single {
+        flex-basis: 100%;
+        margin: 10px; } }
     .nested-section-posts-single-img {
       width: 160px;
       padding: .5rem;
@@ -9910,6 +9918,12 @@ strong {
       color: #212121;
       max-height: 50px;
       overflow: hidden; }
+      @media (max-width: 767px) {
+        .nested-section-posts-single-excerpt.excerpt-desktop {
+          display: none; } }
+      @media (min-width: 768px) {
+        .nested-section-posts-single-excerpt.excerpt-mobile {
+          display: none; } }
     .nested-section-posts-single-readmore {
       font-size: 12px;
       color: #ff6f61;
