--- a/wp-content/themes/healthkart/assets/css/theme-styles.css
+++ b/wp-content/themes/healthkart/assets/css/theme-styles.css
@@ -9844,7 +9844,8 @@ strong {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
     text-align: center;
     max-width: 100%;
-    overflow: auto; }
+    overflow: auto;
+    display: flex; }
     .nested-section-chips .single-chip {
       display: inline-block;
       font-size: 16px;
