--- a/wp-content/themes/healthkart/assets/scss/_category.scss
+++ b/wp-content/themes/healthkart/assets/scss/_category.scss
@@ -228,6 +228,7 @@
 		text-align: center;
 		max-width: 100%;
 		overflow: auto;
+		display: flex;
 		.single-chip{
 			display: inline-block;
 			font-size: 16px;
