--- a/wp-content/themes/healthkart/assets/scss/_category.scss
+++ b/wp-content/themes/healthkart/assets/scss/_category.scss
@@ -229,6 +229,12 @@
 		max-width: 100%;
 		overflow: auto;
 		display: flex;
+		position: fixed;
+		bottom: 0;
+		z-index: 9;
+		left: 0;
+		right: 0;
+		display: none;
 		.single-chip{
 			display: inline-block;
 			font-size: 16px;
