--- a/wp-content/themes/healthkart/assets/scss/_category.scss
+++ b/wp-content/themes/healthkart/assets/scss/_category.scss
@@ -235,6 +235,7 @@
 		left: 0;
 		right: 0;
 		display: none;
+		justify-content:center;
 		.single-chip{
 			display: inline-block;
 			font-size: 16px;
