--- a/wp-content/themes/healthkart/assets/scss/_category.scss
+++ b/wp-content/themes/healthkart/assets/scss/_category.scss
@@ -235,7 +235,9 @@
 		left: 0;
 		right: 0;
 		display: none;
-		justify-content:center;
+		@media(min-width: 1200px){
+			justify-content:center;
+		}
 		.single-chip{
 			display: inline-block;
 			font-size: 16px;
