--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -374,6 +374,7 @@
 	background-color: #00bfbf !important;
 	border-color: #00bfbf !important;
 	font-weight: 500;
+	padding: 10px 60px;
 	&:hover{
 		background-color: #009999 !important;
 	}
