--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -174,6 +174,7 @@
 		color: #fff;
 		border-radius: 10px;
 		font-size: 13px;
+		font-weight: bolder;
 		&-titles, &-values{
 			@media (max-width: 767px){
 				flex-wrap: nowrap;
