--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -117,7 +117,7 @@
     				height: 120px;
     			}
 				@media (max-width: 767px){
-					height: auto;
+					height: 250px;
 				}
 			}
 			img{
@@ -246,6 +246,9 @@
     			@media (max-width: 767px){
     				height: auto;
     			}
+			}
+			iframe{
+    			height: 250px;
 			}
 			@media (min-width: 768px){
 				margin-bottom: 20px;
