--- a/wp-content/themes/healthkart/assets/css/theme-styles.css
+++ b/wp-content/themes/healthkart/assets/css/theme-styles.css
@@ -9861,20 +9861,22 @@ strong {
     text-align: center;
     max-width: 100%;
     overflow: auto;
-    display: flex;
-    position: fixed;
-    bottom: 0;
-    z-index: 9;
-    left: 0;
-    right: 0;
-    display: none; }
-    @media (min-width: 1200px) {
+    display: flex; }
+    @media (max-width: 1023px) {
+      .nested-section-chips {
+        position: fixed;
+        bottom: 0;
+        z-index: 9;
+        left: 0;
+        right: 0;
+        display: none; } }
+    @media (min-width: 1300px) {
       .nested-section-chips {
         justify-content: center; } }
     .nested-section-chips .single-chip {
       display: inline-block;
       font-size: 16px;
-      margin: 0 7px;
+      margin: 0 9px;
       font-weight: 700;
       text-transform: uppercase;
       cursor: pointer;
