--- a/wp-content/themes/healthkart/assets/scss/_category.scss
+++ b/wp-content/themes/healthkart/assets/scss/_category.scss
@@ -229,19 +229,21 @@
 		max-width: 100%;
 		overflow: auto;
 		display: flex;
-		position: fixed;
-		bottom: 0;
-		z-index: 9;
-		left: 0;
-		right: 0;
-		display: none;
-		@media(min-width: 1200px){
+		@media(max-width: 1023px){
+			position: fixed;
+			bottom: 0;
+			z-index: 9;
+			left: 0;
+			right: 0;
+			display: none;
+		}
+		@media(min-width: 1300px){
 			justify-content:center;
 		}
 		.single-chip{
 			display: inline-block;
 			font-size: 16px;
-			margin: 0 7px;
+			margin: 0 9px;
 			font-weight: 700;
 			text-transform: uppercase;
 			cursor: pointer;
