--- a/wp-content/themes/healthkart/assets/css/theme-styles.css
+++ b/wp-content/themes/healthkart/assets/css/theme-styles.css
@@ -9741,7 +9741,7 @@ strong {
       background-size: contain; }
       @media (max-width: 767px) {
         .nested-section-subcategory-content .slick-arrow {
-          display: none; } }
+          display: none !important; } }
     .nested-section-subcategory-content .recent-post {
       border-top: 0;
       box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
