--- a/wp-content/themes/healthkart/assets/scss/_category.scss
+++ b/wp-content/themes/healthkart/assets/scss/_category.scss
@@ -64,7 +64,7 @@
 				    background-color: transparent;
 				    background-size: contain;		
 				   	@media (max-width: 767px){
-						display: none;
+						display: none!important;
 					}	
 				}
 			}
