--- a/wp-content/themes/healthkart/assets/scss/_header.scss
+++ b/wp-content/themes/healthkart/assets/scss/_header.scss
@@ -187,6 +187,11 @@
 							outline: 0;
 						}
 					}
+					&:nth-child(-n+2){
+						@media (min-width: 992px){
+							min-height: 440px;
+						}
+					}
 					@media (min-width: 992px){
 						.sub-menu{
 			 				display: none; 
@@ -196,7 +201,7 @@
 						    top: 36px;
 						    left: 0;
 						    right: 0;
-						    min-height: 440px;
+						    //min-height: 440px;
 						    width: 250px;
 						    box-shadow: 0px 0px 5px 0px #f3f3f3;
 						    z-index: 4;
