--- a/wp-content/themes/healthkart/assets/css/theme-styles.css
+++ b/wp-content/themes/healthkart/assets/css/theme-styles.css
@@ -7745,7 +7745,7 @@ a.text-dark:hover, a.text-dark:focus {
           .site-header .site-navigation .header-menu ul.menu li a:focus {
             outline: 0; }
         @media (min-width: 992px) {
-          .site-header .site-navigation .header-menu ul.menu li:nth-child(-n+2) {
+          .site-header .site-navigation .header-menu ul.menu li:nth-child(-n+2) .sub-menu {
             min-height: 440px; } }
         @media (min-width: 992px) {
           .site-header .site-navigation .header-menu ul.menu li .sub-menu {
