--- a/wp-content/themes/healthkart/assets/scss/_header.scss
+++ b/wp-content/themes/healthkart/assets/scss/_header.scss
@@ -139,6 +139,7 @@
 					color: black;
 				    padding: 0 8px;
 				    position: relative;
+				    border-width: 2px;
 				    img.search-icon-white{
 				    	@media (max-width: 991px){
 				    		display: none;
